# ppt-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PROCESS.md  README.md  context.md
.github/workflows/: release-anna-search-executa.yml  release-presenton-html-to-pptx-model.yml  (+2 more)
anna-search-executa/: .gitignore  build_binary.sh  manifest.json  pyproject.toml  smoke_test_bundle.py
codex-ppt-runs/: README.md
docs/: authorization.md  authorization.zh-CN.md  binary-distribution.md  binary-distribution.zh-CN.md  executa.md  protocol-spec.md
examples/anna-app-file-upload-demo/executas/file-upload-via-executa-python/: build_binary.sh  executa.json  file_upload_via_executa_plugin.py  pyproject.toml
ppt-app/: .env.example  .gitignore  README.md  app.json  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
ppt-app/executas/anna-search/: README.md  build_binary.sh  example_plugin.py  executa.json  manifest.json  pyproject.toml  smoke_test_bundle.py
ppt-app/executas/anna-search/scripts/: binary_release.py  embed_manifest.py
ppt-app/executas/anna-search/src/anna_search_executa/: __init__.py  plugin.py  rpc.py
ppt-app/executas/anna-search/src/anna_search_executa/providers/: __init__.py  base.py
ppt-app/executas/anna-search/tests/: test_ddgs_provider.py  test_protocol.py
presenton-html-to-pptx-model/: .gitignore  README.md  build_binary.sh  example_plugin.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
presenton-pptx-generator/: README.md  build_binary.sh  example_plugin.py  manifest.json  manual_test.py  nuitka-package.config.yml  prepare_cairo_runtime.py  pyproject.toml  smoke_test_bundle.py  test_binary_release.py
presenton-pptx-generator/scripts/: binary_release.py
presenton-pptx-generator/src/: presenton_pptx_generator_plugin.py
presenton-pptx-generator/src/presenton_sdk_pptx_generator/: api.py  cli.py  creator.py  download.py  image_utils.py  models.py  text_runs.py
presenton-pptx-generator/src/presenton_sdk_pptx_generator/templates/: notesMaster.xml  theme.xml
presenton-template-engine/: .gitignore  README.md  build_binary.sh  example_plugin.js  example_plugin_pkg.cjs  manifest.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
scripts/: run-ppt-pipeline.mjs  sync-ppt-app-to-anna-apps.mjs  sync-presenton-pptx-generator-manifest.mjs  sync-presenton-template-engine-manifest.mjs  sync-tool-manifests.mjs  sync-tool-manifests.test.mjs
test-app/: manifest.json  package.json
test-aps-app/: README.md  app.json  manifest.json  package.json
test-session-app/: README.md  app.json  manifest.json
(+1541 files in other folders)
